- Add RouteGuards so that authenticated users are not able to go to registerUser/login page (Is this the best approach?) - Add constant for API Endpoints - Integrate with Restful (HATEOAS) backend - Implement component - service interaction to get the API going - List pages should behave properly when there are empty list entities - List binding objects are introduced that enable binding to a HATEOAS compliant data. This code however looks quite funky.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
 
 <div class="container">
     <!-- Alerting from here: http://jasonwatmore.com/post/2018/10/29/angular-7-user-registration-and-login-example-tutorial -->
+    
     <alert></alert>
     <router-outlet></router-outlet>
     <!-- <div class="jumbotron">
@@ -20,7 +21,7 @@
                 </div>
             </div>
     </div> -->
-    <router-outlet></router-outlet>
+    <!-- <router-outlet></router-outlet> -->
 </div>
 
 <app-footer></app-footer>
