--- a/src/app/register-user/register-user.component.html
+++ b/src/app/register-user/register-user.component.html
@@ -1,4 +1,4 @@
-<H4>Post</H4>
+<H4>Register User</H4>
 
 <div class="container">
   <!-- <div class="alert alert-warning" *ngIf="userForm.dirty && title.invalid">Title is required and should be between 2 to 30 characters</div> -->
@@ -6,6 +6,7 @@
   <div class="alert alert-warning" *ngIf="(password.dirty && password.touched) && password.invalid">Password is required</div>
   <div class="alert alert-warning" *ngIf="(email.dirty && email.touched) && email.invalid">Please enter a valid email</div>
   <div class="alert alert-warning" *ngIf="(spaceName.dirty && spaceName.touched) && spaceName.invalid">SpaceName is required and should be between 2 to 30 characters</div>
+  <div class="alert alert-warning" *ngIf="error">{{error}}</div>
   
   <form (ngSubmit)="!userForm.invalid && registerUser()" #userForm="ngForm">
     <fieldset class="form-group">
@@ -18,7 +19,7 @@
     <fieldset class="form-group">
       <label>Password</label>
       <input type="password" #password="ngModel" 
-            [(ngModel)]="user.password" class="form-control" 
+            [(ngModel)]="user.passwordHash" class="form-control" 
                 name="name" required="required" minlength="1">
     </fieldset>
 
