--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -3,7 +3,7 @@
 <div class="alert alert-success" *ngIf='message'>{{message}}</div>
 
 <div class="container">
-  <table class="table">
+  <table *ngIf="users" class="table">
     <thead>
       <tr>
         <th>User Name</th>
@@ -21,6 +21,10 @@
 
   </table>
 
+  <!-- TODO, this could use a bootstrap spinner-->
+  <span [hidden]="!loading">Loading...</span>
+
+  <p *ngIf="!loading && !users">There is no user space to explore</p>
   <!-- <div class="row">
     <button (click)="addTodo()" class="btn btn-success">Add</button>
   </div> -->
