--- a/src/app/post/post-detail/post-detail.component.html
+++ b/src/app/post/post-detail/post-detail.component.html
@@ -30,7 +30,7 @@
     <ul class="list-group list-group-flush">
         <li class="list-group-item" *ngFor="let comment of comments">                   
             <div class="card-body">
-                <h5 class="card-title">By {{comment.commentorName}}</h5>
+                <h5 class="card-title">By {{comment.commentor.name}}</h5>
                 <h6 class="card-subtitle mb-2 text-muted">{{comment.created | date}}</h6>
                 <p class="card-text">{{comment.content}}</p>
             </div>
