Remove alert mechanism as it does not work with this setup Introduce a generic error handler introduce api-call-states in all the models

--- a/src/app/post/post-detail/post-detail.component.html
+++ b/src/app/post/post-detail/post-detail.component.html
@@ -2,7 +2,9 @@
     <h4 class="display-10">{{post.title}}</h4>
     <p class="lead">{{post.description}}</p>
 </div>
-
+<div *ngIf="hasError">
+    <p>{{getErrorMessage()}}</p>
+</div>
 <div class="card">
     <div class="card-header">
         Comments
