--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,11 +1,9 @@
 <div class="container">
-  <div class="alert alert-warning" *ngIf='invalidLogin'>{{errorMessage}}</div>
+  <div class="alert alert-warning" *ngIf='hasError()'>{{state.error}}</div>
 
   <div>
     User Name : <input type="text" name="username" [(ngModel)]="username">
     Password  : <input type="password" name="password" [(ngModel)]="password">
-    <!-- <button (click)=handleLogin() class="btn btn-success">Login</button> -->
-    <!-- <button (click)=handleBasicAuthLogin() class="btn btn-success">Login</button> -->
     <button (click)=handleJWTAuthLogin() class="btn btn-success">Login</button>
   </div>
 </div>
