--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,6 +4,6 @@
   <div>
     User Name : <input type="text" name="username" [(ngModel)]="username">
     Password  : <input type="password" name="password" [(ngModel)]="password">
-    <button (click)=handleJWTAuthLogin() class="btn btn-success">Login</button>
+    <button (click)=handlerLogin() class="btn btn-success">Login</button>
   </div>
 </div>
