--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -7,7 +7,7 @@
           <li><a routerLink="/users" routerLinkActive="active" class="nav-link">Home</a></li>
           <li><a *ngIf="authenticationService.isUserLoggedIn()" routerLinkActive="active" routerLink="/createPost" class="nav-link">Create Post</a></li>
           <!-- <li><a *ngIf="authenticationService.isUserLoggedIn()" routerLinkActive="active" routerLink="/posts" class="nav-link">Posts</a></li> -->
-          <li><a *ngIf="authenticationService.isUserLoggedIn()" routerLinkActive="active" routerLink="/account" class="nav-link">My Account</a></li>
+          <li><a *ngIf="authenticationService.isUserLoggedIn()" routerLinkActive="active" routerLink="/myaccount" class="nav-link">My Account</a></li>
       </ul>
 
       <ul class="navbar-nav navbar-collapse justify-content-end">
